refactor : 일부 함수 대체